--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  # - title: "Quick-Start Guide"
+  #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
@@ -10,3 +10,13 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+  - title: "Malware Analysis"
+    url: /categories/#malware-analysis
+  - title: "Threat Hunting"
+    url: /categories/#threat-hunting
+  - title: "DFIR"
+    url: /categories/#dfir
+  - title: "Programming"
+    url: /categories/#programming
+   - title: "CTF"
+    url: /categories/#ctf
