--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
 lunr:
   search_within_pages    : # true, false (default)
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Ninja Kitty Team"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/ctfd-template/ninja-kitty-logo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Just a team likes play CTF, games, DFIR, Threat Hunting ..."
   location         : "VietNam"
   email            :
